--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,6 @@
+R1.0.1      05-Nov-2018     J. Vasquez (jvasquez)
+    * Update CPSW framework to R3.6.6.
+
 R1.0.0      17-Mar-2017     H. Slepicka (slepicka)
     Changes on the package structure
         Move source code to src folder
