--- a/README
+++ b/README
@@ -15,3 +15,4 @@ inside src folder.
 Please check CPSW Framework INSTALL document for details about configurations and
 other instructions.
 
+This branch uses recent cpsw, at the time of this writing commit 2908160035a600
