update CPSW framework to R4.1.0

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,6 @@
+R1.0.2      26-Jun-2019     Kukhee Kim (khkim)
+    * Update CPSW framework to R4.1.0
+
 R1.0.1      05-Nov-2018     J. Vasquez (jvasquez)
     * Update CPSW framework to R3.6.6.
 
