update cpsw framework to R4.2.0

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,6 @@
+R1.1.1      20-Sep-2019     Kukhee Kim (khkim)
+    * update cpsw framework to R4.2.0
+
 R1.1.0      26-Jun-2019     Kukhee Kim (khkim)
     * Update CPSW framework to R4.1.2
 
