--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,6 @@
+R1.1.2      28-Oct-2019     Kukhee Kim (khkim)
+    * build with cpsw/framework R4.3.1
+
 R1.1.1      20-Sep-2019     Kukhee Kim (khkim)
     * update cpsw framework to R4.2.0
 
