--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,6 @@
+R1.1.3      30-Jan-2020     J. Vasquez (jvasquez)
+    * Update CPSW framework to R4.3.2.
+
 R1.1.2      28-Oct-2019     Kukhee Kim (khkim)
     * build with cpsw/framework R4.3.1
 
