--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,8 @@
+R1.2.1      30-Oct-2024     J. Lorelli (lorelli)
+    * Make PACKAGE_TOP handling more flexible
+    * Fix build on newer GCC
+    * Added license header to all source files
+
 R1.2.0      28-Jan-2020     J. Vasquez (jvasquez)
     * Update CPSW framework to R4.4.1.
     
